frontend/sre/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: frontend
