frontend/sre/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
  - frontend-service
  http:
  - route:
    - destination:
        host: frontend-service
        subset: v1
